Add LambdaHandlerTest